# HyprlandWallpaperPicker

./: .gitignore  CMakeLists.txt
include/: wpicker.hpp
src/: main.cpp  wpicker.cpp
